--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,54 @@
+0.23.22 (stable)
+ * Fix memory-safety issues that affect the RPC protocol
+   (CVE-2020-29361, CVE-2020-29362, and CVE-2020-29363), discovered
+   and fixed by David Cook
+ * anchor: Prefer persistent format when storing anchor [PR#329]
+ * common: Fix infloop in p11_path_build [PR#326, PR#327]
+ * proxy: C_CloseAllSessions: Make sure that calloc args are non-zero [PR#325]
+ * common: Check for a NULL locale before freeing it [PR#321]
+ * Build and test fixes [PR#313, PR#315, PR#317, PR#318, PR#319, PR#323, PR#330, PR#333, PR#334, PR#335, PR#338, PR#339]
+
+0.23.21 (stable)
+ * proxy: Do not assign duplicate slot IDs [PR#282]
+ * common: Get program name based on executable path if possible [PR#307]
+ * anchor: Exit with non-zero code, if any error occurs [PR#304]
+ * Build and test fixes [PR#283, PR#290, PR#291, PR#292, PR#296, PR#299, PR#305, PR#306, PR#309, PR#311]
+
+0.23.20 (stable)
+ * Revert "Fix RPC when length-s are 0" changes [PR#276]
+
+0.23.19 (stable)
+ * common: add Russian PKCS#11 extensions to pkcs11x.h header [PR#255]
+ * Add simple bash completion for provided commands [PR#258]
+ * Unbreak list matching in enable-in and disable-in [PR#262]
+ * Fix RPC when length-s are 0 [PR#259]
+ * rpc: Add vsock transport support [PR#270]
+ * trust: Support CKA_NSS_{SERVER,EMAIL}_DISTRUST_AFTER [PR#265]
+ * Build fixes [PR#271, PR#272, PR#273, ...]
+
+0.23.18 (stable)
+ * rpc: Allow empty CK_DATE value [PR#253]
+ * build: Meson fixes [PR#245]
+ * build: Adjust feature parity between meson and autotools [PR#247]
+
+0.23.17 (stable)
+ * common: Fix uClibc-ng compilation [PR#237]
+ * trust: do not allow daylight to invalidate date validation [PR#236]
+ * build: Port to meson build system [PR#231, PR#234]
+ * rpc: On UNIX wait on condition variable instead of FD if header is for a different thread [PR#232]
+ * doc: Add 'server' command in help [PR#229]
+ * Build and test fixes [PR#230]
+
+0.23.16 (stable)
+ * proxy: Support C_WaitForSlotEvent() if CKF_DONT_BLOCK is specified [PR#225]
+ * conf: Ignore user configuration if the program is running as root [PR#226]
+ * proxy: Refresh slot list on every C_GetSlotList call [PR#224]
+ * modules: Fix index used in call to p11_dict_remove() [PR#219]
+ * Fix Win32 p11_dl_error crash [PR#218]
+ * modules: check gl.modules before iterates on it when freeing [PR#217]
+ * trust: Ignore unreadable content in anchors [PR#215]
+ * extract-jks: Prefer _p11_extract_jks_timestamp to SOURCE_DATE_EPOCH [PR#213]
+
 0.23.15 (stable)
  * trust: Improve error handling if backed trust file is corrupted [PR#206]
  * url: Prefer upper-case letters in hex characters when encoding [PR#193]
